Configuring the app to use SQL sever

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,11 +1,11 @@
 {
+  "ConnectionStrings": {
+        "DefaultConnection": "Data Source=.;Initial Catalog=Restore;Integrated Security=True;Trust Server Certificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "ConnectionStrings": {
-      "DefaultConnection": "Data Source=restore.db"
-   }
+  }
 }
